# Work.Log

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE.md  README.md
Core/: CLOUD_SYNC_SETUP.md  README.md  schema.sql
WorkLog.Desktop/: CMakeLists.txt  FLATPAK.md  NEXT-STEPS.md  TESTING.md  flatpak-test-build.sh  org.worklog.desktop.desktop  org.worklog.desktop.metainfo.xml  work.worklog.desktop.json  work.worklog.desktop.metainfo.xml  work.worklog.worklog.metainfo.xml
WorkLog.Desktop/resources/: resources.qrc
WorkLog.Desktop/src/cpp/: databasemanager.cpp  databasemanager.h  hierarchymodel.cpp  hierarchymodel.h  main.cpp  syncmanager.cpp  syncmanager.h  tagmodel.cpp  tagmodel.h  worksessionmodel.cpp  worksessionmodel.h
WorkLog.Desktop/src/qml/: HierarchyPane.qml  SessionDetailPane.qml  SessionEditDialog.qml  SessionListPane.qml  SyncDialog.qml  TagManagementDialog.qml  main.qml
WorkLog.Web/: .dockerignore  Dockerfile  WorkLog.Web.sln  docker-compose.prod.yml  docker-compose.yml  reset-password.sh
WorkLog.Web/Domain/: WorkLog.Domain.csproj
WorkLog.Web/Domain/Data/: WorkLogDbContext.cs
WorkLog.Web/Domain/Entities/: SyncMetadata.cs  SystemSetting.cs  Tag.cs  User.cs  WorkSession.cs
WorkLog.Web/Domain/Services/: AuthService.cs  IAuthService.cs  ITagService.cs  IWorkSessionService.cs  TagService.cs  WorkSessionService.cs
WorkLog.Web/Domain/Services/Sync/: CloudModels.cs  CloudSyncService.cs  ICloudSyncService.cs
WorkLog.Web/Website/: Program.cs  WorkLog.Website.csproj  appsettings.Development.json  appsettings.json
WorkLog.Web/Website/Controllers/: AuthController.cs  HomeController.cs  SessionController.cs  SyncController.cs  TagController.cs
WorkLog.Web/Website/Models/: HierarchyViewModel.cs  InitialSetupViewModel.cs  LoginViewModel.cs  SessionEditViewModel.cs
WorkLog.Web/Website/Views/: _ViewImports.cshtml
WorkLog.Web/Website/Views/Auth/: InitialSetup.cshtml  Login.cshtml
WorkLog.Web/Website/Views/Home/: Dashboard.cshtml  Index.cshtml  SignUp.cshtml
WorkLog.Web/Website/Views/Session/: Create.cshtml  Edit.cshtml
WorkLog.Web/Website/Views/Shared/: _Layout.cshtml
WorkLog.Web/Website/Views/Sync/: Configure.cshtml  Index.cshtml
WorkLog.Web/Website/Views/Tag/: Index.cshtml
WorkLog.Web/Website/wwwroot/.well-known/: org.flathub.VerifiedApps.txt
WorkLog.Web/Website/wwwroot/css/: site.css
WorkLog.Web/Website/wwwroot/js/: site.js
